--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@sveltejs/adapter-auto": "^1.0.0",
+    "@sveltejs/adapter-vercel": "^2.0.2",
     "@sveltejs/kit": "^1.0.0",
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
