--- a/package.json
+++ b/package.json
@@ -20,5 +20,8 @@
     "vite": "^4.0.0",
     "vitest": "^0.25.3"
   },
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "svelte-preprocess-import-assets": "^0.2.5"
+  }
 }
