--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "prettier": "^2.8.0",
     "prettier-plugin-svelte": "^2.8.1",
     "svelte": "^3.54.0",
+    "svelte-range-slider-pips": "^2.1.1",
     "vite": "^4.0.0",
     "vitest": "^0.25.3"
   },
